# raft-log

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain  rustfmt.toml
.github/workflows/: ci.yml
docs/: archicture-design.md  architecture.md  data-layout.md  two-in-one.md
examples/: README.md  basic_usage.rs
src/: config.rs  dump_writer.rs  errors.rs  file_lock.rs  lib.rs  num.rs  offset_reader.rs  testing.rs  types.rs
src/api/: mod.rs  raft_log_writer.rs  state_machine.rs  types.rs  wal.rs
src/chunk/: chunk_id.rs  closed_chunk.rs  mod.rs  open_chunk.rs  record_iterator.rs
src/disp/: display_option.rs  mod.rs
src/errors/: storage_errors.rs
src/raft_log/: access_state.rs  dump.rs  dump_api.rs  dump_data.rs  dump_raft_log.rs  log_data.rs  mod.rs  raft_log.rs  stat.rs
src/raft_log/state_machine/: mod.rs  payload_cache.rs  raft_log_state.rs
src/raft_log/wal/: callback.rs  flush_request.rs  flush_worker.rs  mod.rs  wal_record.rs
src/tests/: context.rs  mod.rs  sample_data.rs  test_concurrent_read.rs  test_context.rs  test_raft_log.rs  test_reopen.rs
tests/: test_compat.rs  test_massive.rs  test_rmp_serde.rs
tests/compat/: README.md
tests/compat/0.2.6/: dump.txt
tests/compat/0.2.6/raft-log/: r-00_000_000_000_000_000_000.wal  r-00_000_000_000_000_000_161.wal  r-00_000_000_000_000_000_324.wal  r-00_000_000_000_000_000_509.wal
tests/massive/: README.md  periodical-read.txt
