[package]
name = "raft-log"
version = "0.2.6"
edition = "2021"

authors = [
    "Zhang Yanpo <drdr.xp@gmail.com>",
]
categories = ["algorithms", "data-structures"]
description = "Raft log implementation"
documentation = "https://docs.rs/raft-log"
homepage = "https://github.com/drmingdrmer/raft-log"
keywords = ["raft", "log"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/drmingdrmer/raft-log"

[dependencies]
byteorder = { version = "1.5.0" }
codeq = { version = "0.4.0" }
fs2 = "0.4.3"
thiserror = { version = "1.0.64" }
log = "0.4.22"
clap = { version = "4.5.20", features = ["derive"] }


[dev-dependencies]
tempfile = { version = "3.4.0" }
pretty_assertions = "1.4.1"
indoc = "2"

[[bin]]
name = "raft-log-dump"
path = "src/bin/dump.rs"

[[bin]]
name = "raft-log-bench"
path = "src/bin/bench.rs"


[patch.crates-io]
# codeq = { path = "../codeq" }
