[package]
name = "raft-log"
version = "0.2.14"
edition = "2024"

authors = [
    "Zhang Yanpo <drdr.xp@gmail.com>",
]
categories = ["algorithms", "data-structures"]
description = "Raft log implementation"
documentation = "https://docs.rs/raft-log"
homepage = "https://github.com/drmingdrmer/raft-log"
keywords = ["raft", "log"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/drmingdrmer/raft-log"

[dependencies]
byteorder = { version = "1.5.0" }
codeq = { version = "0.5.1" }
display-more = { version = "0.2.2" }
fs2 = "0.4.3"
log = "0.4.22"
thiserror = { version = "1.0.64" }


[dev-dependencies]
goldenfile = { version = "1.8.0" }
indoc = "2"
pretty_assertions = "1.4.1"
rand = { version = "0.9.0" }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
tempfile = { version = "3.4.0" }

[[bin]]
name = "raft-log-bench"
path = "src/bin/bench.rs"


[patch.crates-io]
# codeq = { path = "../codeq" }
# display-more = { path = "../display-more" }

